--remove migration; --IsSmoker to bool?

--- a/Code/WorkSpeed/WorkSpeed.Business.csproj
+++ b/Code/WorkSpeed/WorkSpeed.Business.csproj
@@ -152,7 +152,7 @@
     <Compile Include="Constraints\ITimeConstraints.cs" />
     <Compile Include="Constraints\ITimeConstraintFactory.cs" />
     <Compile Include="DayPeriod.cs" />
-    <Compile Include="Factories\TypeRepositoryLoader.cs" />
+    <Compile Include="Factories\TypeRepositoryExtensions.cs" />
     <Compile Include="FileModels\Comparers\ActionImportModelComparer.cs" />
     <Compile Include="Constraints\IBreakConstraints.cs" />
     <Compile Include="Constraints\ICategoryConstraints.cs" />
