--- a/Code/WorkSpeed.DesktopClient/App.config
+++ b/Code/WorkSpeed.DesktopClient/App.config
@@ -27,8 +27,13 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyEmployeeIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.3.1" newVersion="4.0.3.1" />
+        <bindingRedirect oldVersion="0.0.0.0-4.5.1.1" newVersion="4.0.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.ComponentModel.Annotations" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
+
     </assemblyBinding>
   </runtime>
 
