--- a/Tests/WorkSpeed.Business.Tests/WorkSpeed.Business.Tests.csproj
+++ b/Tests/WorkSpeed.Business.Tests/WorkSpeed.Business.Tests.csproj
@@ -169,13 +169,13 @@
       <Project>{47680bf8-c76a-44b9-bde3-694f1a73ccb1}</Project>
       <Name>Agbm.NpoiExcel</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Code\WorkSpeed.Business\WorkSpeed.Business.csproj">
+      <Project>{035d995a-6f8a-47c1-aebd-41b2cc5d6d7d}</Project>
+      <Name>WorkSpeed.Business</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Code\WorkSpeed.Data\WorkSpeed.Data.csproj">
       <Project>{72e065c5-8769-4008-9529-11194be488e0}</Project>
       <Name>WorkSpeed.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Code\WorkSpeed\WorkSpeed.Business.csproj">
-      <Project>{035d995a-6f8a-47c1-aebd-41b2cc5d6d7d}</Project>
-      <Name>WorkSpeed.Business</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
