--- a/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
+++ b/Code/WorkSpeed.Data/WorkSpeed.Data.csproj
@@ -148,7 +148,8 @@
     <Compile Include="DataContexts\Configurations\RankConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\ShiftConfiguration.cs" />
     <Compile Include="DataContexts\Configurations\ShortBreakScheduleConfiguration.cs" />
-    <Compile Include="DataContexts\ImportServiceExtensions\WorkSpeedDbContextExtensions.cs" />
+    <Compile Include="DataContexts\ImportService\WorkSpeedDbContextExtensions.cs" />
+    <Compile Include="DataContexts\MainViewModel\WorkSpeedDbContextExtensions.cs" />
     <Compile Include="DataContexts\WorkSpeedDbContextExtensions.cs" />
     <Compile Include="Migrations\20190212192117_InitialCreate.cs" />
     <Compile Include="Migrations\20190212192117_InitialCreate.designer.cs">
